# hmi_display_pilot

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py  pwrforge.toml  setup.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/workflows/: daily_tests.yml  pr.yml  release.yml  workflow-common.yml
config/conan/profiles/: esp32_Debug  esp32_MinSizeRel  esp32_RelWithDebInfo  esp32_Release
src/: CMakeLists.txt  lora_pilot.cpp
src/libs/utils/: CMakeLists.txt
src/libs/utils/app_info/: CMakeLists.txt  app_info.cpp  app_info.h
src/libs/utils/os_task/: CMakeLists.txt  os_task.cpp  os_task.h  os_task_manager.cpp  os_task_manager.h  scoped_mutex_lock.h
src/tasks/: CMakeLists.txt
src/tasks/led_task/: CMakeLists.txt  led_task.cpp  led_task.h
tests/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
tests/mocks/: CMakeLists.txt
tests/ut/libs/: CMakeLists.txt
tests/ut/libs/utils/: CMakeLists.txt
tests/ut/libs/utils/app_info/: CMakeLists.txt  ut_app_info.cpp
